--- a/style.css
+++ b/style.css
@@ -470,6 +470,39 @@ main{
     overflow: hidden;
 } 
 
+.tab-titles {
+padding-top: 100px;
+margin: auto;
+width: 40%;
+text-align: center;
+display: flex;
+gap: 30px;
+}
+
+/*phone*/
+@media only screen and (max-width: 850px) { 
+    .tab-titles {
+        width: 50%;
+    }
+}
+.tab-link {
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 10px;
+    border-color: var(--themeColor);
+    background-color: rgb(0, 0, 0);
+    color: white;
+    transition: 1000ms;
+}
+
+.tab-link:hover {
+
+    background-color: var(--themeColor);
+}
+
+.tab-titles .active-link {
+    background-color: var(--themeColor);
+}
 .layer {
     width: 100%;
     height: 0;
@@ -535,6 +568,10 @@ main{
 .mySlides {
     display: none;
 }
+
+.mySlides-1 {
+    display: none;
+}
 img {
     vertical-align: middle;
 }
@@ -544,10 +581,18 @@ img {
   max-width: 80%;
   position: relative;
   margin: auto;
-  padding-top: 100px;
-  
   
 }
+
+.h {
+    display: none;
+}
+.active-tab {
+    display: block;
+}
+
+
+
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -555,7 +600,7 @@ img {
   top: 50%;
   width: auto;
   padding: 16px;
-  margin-top: 22px;
+  margin-top: -25px;
   color: var(--themeColor);
   font-weight: bold;
   font-size: 30px;
@@ -572,7 +617,7 @@ img {
 }
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  font-size: 38px;
 }
 
 /* Number text (1/3 etc) */
@@ -584,7 +629,7 @@ img {
   top: 0;
 }
 /* The dots/bullets/indicators */
-.dot {
+.dot,.dot-1 {
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -594,7 +639,7 @@ img {
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-.live, .dot:hover {
+.live, .dot:hover, .dot-1:hover {
   background-color: #343434;
 }
 /* Fading animation */
@@ -616,7 +661,7 @@ img {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
-.dot{
+.dot, .dot-1{
  height: 10px;
   width: 10px;
 }
